[package]
name = "screeps-rover"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"

[features]
default = []
## Enable the `screeps` feature to get real game API implementations of the
## abstraction traits (pathfinding, creep actions, cost-matrix data source,
## visualization). Without this feature the crate compiles and runs on native
## targets for offline testing — only pure-Rust data types from screeps-game-api
## are used and no JS interop functions are called.
screeps = []
profile = ["screeps-timing", "screeps-timing-annotate"]

[dependencies]
screeps-game-api = "0.23"
screeps-cache = { git = "https://github.com/Azaril/screeps-cache" }
screeps-timing = { git = "https://github.com/Azaril/screeps-timing", optional = true }
screeps-timing-annotate = { git = "https://github.com/Azaril/screeps-timing-annotate", optional = true }
serde = "1.0"
log = "0.4"